syntax="proto3";

package docx_template_service;
option go_package="genproto/template_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";


service DocxTemplateService {
    rpc CreateDocxTemplate(CreateDocxTemplateReq) returns (DocxTemplate) {}
    rpc GetListDocxTemplate(GetListDocxTemplateReq) returns (GetListDocxTemplateRes) {}
    rpc GetSingleDocxTemplate(GetSingleDocxTemplateReq) returns (DocxTemplate) {}
    rpc UpdateDocxTemplate(UpdateDocxTemplateReq) returns (DocxTemplate) {}
    rpc DeleteDocxTemplate(DeleteDocxTemplateReq) returns (google.protobuf.Empty) {}
}

message DeleteDocxTemplateReq {
    string project_id = 1;
    string id = 2;
    string version_id = 3;
    string resource_id = 4;
}

message UpdateDocxTemplateReq {
    message Table {
        message Relation {
            string relation_id = 1;
        }
        string table_id = 1;
        string type = 2;
        string object_id = 3;
        string filter = 4;
        repeated Relation relations = 5;
    }
    string id = 1;
    string project_id = 2;
    string title = 3;
    string table_slug = 4;
    repeated Table tables = 5;
    string version_id = 6;
    string resource_id = 7;
    string file_url = 8;
}

message GetSingleDocxTemplateReq {
    string project_id = 1;
    string id = 2;
    string version_id = 3;
    string resource_id = 4;
}

message GetListDocxTemplateReq {
    string project_id = 1;
    string table_slug = 2;
    int32 limit = 3;
    int32 offset = 4;
    string version_id = 5;
    string resource_id = 6;
}

message GetListDocxTemplateRes {
    repeated DocxTemplate docx_templates = 1;
    int32 count = 2;
}

message CreateDocxTemplateReq {
    message Table {
        message Relation {
            string relation_id = 1;
        }
        string table_id = 1;
        string type = 2;
        string object_id = 3;
        string filter = 4;
        repeated Relation relations = 5;
    }
    string project_id = 1;
    string title = 2;
    string table_slug = 3;
    repeated Table tables = 4;
    string version_id = 5;
    string resource_id = 6;
    string file_url = 7;
}

message DocxTemplate {
    message Table {
        message Relation {
            string relation_id = 1;
        }
        string table_id = 1;
        string type = 2;
        string object_id = 3;
        string filter = 4;
        repeated Relation relations = 5;
    }
    string id = 1;
    string project_id = 2;
    string title = 3;
    string table_slug = 4;
    repeated Table tables = 5;
    string version_id = 6;
    string file_url = 7;
}
